--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,6 +1,16 @@
-﻿@{
+﻿@model EmployeeModel;
+@{
     ViewData["Title"] = "Privacy Policy";
 }
 <h1>@ViewData["Title"]</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
+
+@* Strongly Typed View *@
+<div>
+    <h1>Strongly Typed Views</h1>
+    <p>@Model.eId</p>
+    <p>@Model.eName</p>
+    <p>@Model.eAge</p>
+    <p>@Model.ePosition</p>
+</div>
